--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,4 @@
-<% provide :title, t("static_pages.title.help") %>
+<% provide :title, t("static_pages.header.help") %>
 <h1><%= t ".help" %></h1>
 <p>
   <%= t "static_pages.help.test1" %>
