--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<% provide :title, t("static_pages.title.home") %>
+<% provide :title, t("static_pages.home.title") %>
 <div class="center jumbotron">
   <h1><%= t("static_pages.home.welcome") %></h1>
   <h2>
