--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= full_title(yield(:title)) %></title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
-    <%= javascript_pack_tag "application", "data-turbolinks-track": "reload" %>
-    <%= render "layouts/shim" %>
-  </head>
+  <html>
+    <head>
+      <title><%= full_title(yield(:title)) %></title>
+      <%= csrf_meta_tags %>
+      <%= csp_meta_tag %>
+      <%= stylesheet_link_tag "application", media: "all",
+      "data-turbolinks-track": "reload" %>
+      <%= javascript_pack_tag "application", "data-turbolinks-track": "reload" %>
+      <%= render "layouts/shim" %>
+    </head>
   <body>
     <%= render "layouts/header" %>
     <div class="container">
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
       <%= link_to t("static_pages.application.english"), locale: :en %>
       <%= link_to t("static_pages.application.vietnamese"), locale: :vi %>
       <%= yield %>
       <%= render "layouts/footer" %>
+      <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
