--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,4 @@
-<% provide :title, t("static_pages.title.about") %>
+<% provide :title, t(".about") %>
 <h1><%= t ".about"%></h1>
 <p>
   <%= t "static_pages.about.the" %>
