--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,4 +1,4 @@
-<% provide :title, t("static_pages.title.contact") %>
+<% provide :title, t(".contact") %>
 <h1><%= t ".contact" %></h1>
 <p>
   <%= t "static_pages.contact.dis1" %>
