--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,6 @@
-<h1>User#password_reset</h1>
-
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
-</p>
+<h1><%= t ".title" %></h1>
+<p><%= t ".reset_click" %></p>
+<%= link_to t(".title"),
+ edit_password_reset_url(id: @user.reset_token, email: @user.email, :locale => I18n.locale) %>
+<p><%= t ".exp_hours" %></p>
+<p><%= t ".ignore" %></p>
