--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,3 +1,4 @@
-User#password_reset
-
-<%= @greeting %>, find me in app/views/user_mailer/password_reset.text.erb
+<%= t ".reset_click" %>
+<%= edit_password_reset_url(id: @user.reset_token, email: @user.email, :locale => I18n.locale) %>
+<p><%= t ".exp_hours" %></p>
+<p><%= t ".ignore" %></p>
